Fix text-align

--- a/sass/layout.sass
+++ b/sass/layout.sass
@@ -49,7 +49,7 @@ a:hover, a:visited:hover
   width: 22%
   float: left
   height: 100%
-  padding: 2em
+  padding: 2.5em
   display: block
   +box-sizing()
 
@@ -70,7 +70,6 @@ a:hover, a:visited:hover
   text-align: left
   +link-no-decoration()
   word-break: break-all
-  text-align: center
   border-right: .1em solid $border-color
   // author
   .author
